Fix several api calls and change several UI elements to align with latest V3 api changes

--- a/public/styles.css
+++ b/public/styles.css
@@ -241,3 +241,7 @@ tbody > tr:hover {
     height: 2.5rem;
     text-decoration: none;
 }
+.desktop-page {
+    width: 100%;
+    height: 100%;
+}
